app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
*{
  -webkit-tap-highlight-color: transparent;
}
html{
  scroll-behavior: smooth;
}
body {
  scroll-behavior: smooth;
  @apply text-white bg-primary-950 z-0;
}
.background {
  @apply w-screen min-h-screen fixed flex justify-center pointer-events-none;
}
.background:before {
  @apply content-[""] z-10 absolute w-full h-full opacity-30;
  background-image: url("/assets/images/grid.svg");
}
.background:after {
  @apply absolute content-[""] z-20 w-full h-full top-0;
  background: radial-gradient(circle, rgba(0, 0, 0, 0) 0%, rgb(30, 30, 37) 100%);
}


/* .mesh-gradient {
  content: "";
    position: absolute;
    top: 0;
  z-index: 3;
  background-image: radial-gradient(
      at 27% 37%,
      rgb(30, 30, 37) 0px,
      transparent 0%
    ),
    radial-gradient(at 62% 99%, hsla(201, 88%, 69%, 1) 0, hsla(201, 88%, 69%, 0) 50%),
radial-gradient(at 90% 21%, hsla(224, 88%, 62%, 1) 0, hsla(224, 88%, 62%, 0) 50%),
radial-gradient(at 49% 46%, hsla(166, 85%, 63%, 1) 0, hsla(166, 85%, 63%, 0) 50%),
radial-gradient(at 87% 93%, hsla(204, 93%, 57%, 1) 0, hsla(204, 93%, 57%, 0) 50%),
radial-gradient(at 97% 6%, hsla(234, 95%, 68%, 1) 0, hsla(234, 95%, 68%, 0) 50%),
radial-gradient(at 35% 67%, hsla(261, 91%, 65%, 1) 0, hsla(261, 91%, 65%, 0) 50%);
  width: 100%;
  height: 100%;
  filter: blur(100px) saturate(100%);
  opacity: 0.15;
} */

.app{
  @apply z-10 relative min-h-screen flex flex-col justify-between;
}
.primary-btn{
  @apply bg-primary-800 text-white px-4 py-2 rounded-md;
}
.primary-outline-btn{
  @apply bg-transparent text-white px-4 py-2 rounded-md border border-primary-800;
}
.text-orange-gradient{
  @apply bg-gradient-to-r from-pink-500 to-orange-600 bg-clip-text text-transparent;
}
.icon-btn{
  @apply bg-gray-700 text-white px-3 py-3 rounded;
}

